--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="https://github.com/Meilingriselda/mei/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/Meilingriselda/mei/tarball/master" class="btn">Download .tar.gz</a>
     </section>
-
+<IMG SRC="source.jpg">
     <section class="main-content">
       <p>``Hola mundo!!</p>
 
