--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
+    <center><IMG SRC="mei.jpg" WIDTH=80 HEIGHT=80></center>
     <section class="page-header">
       <h1 class="project-name">Meiling Esteban</h1>
       <h2 class="project-tagline">Me encanta la tecnología y la investigación criminal. I love engineering and criminology</h2>
@@ -17,7 +18,7 @@
       <a href="https://github.com/Meilingriselda/mei/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/Meilingriselda/mei/tarball/master" class="btn">Download .tar.gz</a>
     </section>
-<center><IMG SRC="mei.jpg"></center>
+
     <section class="main-content">
       <p>``Hola mundo!!</p>
 
