--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
        <center><IMG SRC="mei.jpg" WIDTH=150 HEIGHT=150></center>
       <h1 class="project-name">Meiling Esteban</h1>
       <h2 class="project-tagline">Me encanta la tecnología y la investigación criminal. I love engineering and criminology</h2>
-      <a href="https://github.com/Meilingriselda/mei" class="btn">View on GitHub</a>
-      <a href="https://github.com/Meilingriselda/mei/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/Meilingriselda/mei/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://github.com/Meilingriselda/mei" class="btn">Comunidades</a>
+      <a href="https://github.com/Meilingriselda/mei/zipball/master" class="btn">Empresas</a>
+      <a href="https://github.com/Meilingriselda/mei/tarball/master" class="btn">Contacto</a>
     </section>
 
     <section class="main-content">
