--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
        <center><IMG SRC="mei.jpg" WIDTH=150 HEIGHT=150></center>
       <h1 class="project-name">Meiling Esteban</h1>
       <h2 class="project-tagline">Me encanta la tecnología y la investigación criminal. I love engineering and criminology</h2>
-      <a href="https://github.com/Meilingriselda/mei" class="btn">Comunidades</a>
+      <a href="https://github.com/Meilingriselda/Comunidades" class="btn">Comunidades</a>
       <a href="https://github.com/Meilingriselda/mei/zipball/master" class="btn">Empresas</a>
       <a href="https://github.com/Meilingriselda/mei/tarball/master" class="btn">Contacto</a>
     </section>
