--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1 class="project-name">Meiling Esteban</h1>
       <h2 class="project-tagline">Me encanta la tecnología y la investigación criminal. I love engineering and criminology</h2>
       <a href="http://meilingriselda.github.io/Comunidades/" class="btn">Comunidades</a>
-      <a href="https://github.com/Meilingriselda/mei/zipball/master" class="btn">Empresas</a>
+      <a href="http://meilingriselda.github.io/Empresas/" class="btn">Empresas</a>
       <a href="https://github.com/Meilingriselda/mei/tarball/master" class="btn">Contacto</a>
     </section>
 
