--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h2 class="project-tagline">Me encanta la tecnología y la investigación criminal. I love engineering and criminology</h2>
       <a href="http://meilingriselda.github.io/Comunidades/" class="btn">Comunidades</a>
       <a href="http://meilingriselda.github.io/Empresas/" class="btn">Empresas</a>
-      <a href="https://github.com/Meilingriselda/mei/tarball/master" class="btn">Contacto</a>
+      <a href="http://meilingriselda.github.io/Contacto/" class="btn">Contacto</a>
     </section>
 
     <section class="main-content">
