--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
 
     <section class="main-content">
       <p>``Hola mundo!!</p>
+      
+      <p>Educación:</p>
+      <p>Ing. Electrónica</p>
+      <p>Licda. Criminologa y Criminalista</p>
 
+      <p>Huehuetenango, Guatemala</p>
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/Meilingriselda/mei">Meiling Esteban</a> is maintained by <a href="https://github.com/Meilingriselda">Meilingriselda</a>.</span>
 
