--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="page-header">
        <center><IMG SRC="mei.jpg" WIDTH=150 HEIGHT=150></center>
       <h1 class="project-name">Meiling Esteban</h1>
-      <h2 class="project-tagline">Me encanta la tecnología y la investigación criminal. I love engineering and criminology</h2>
+      <h2 class="project-tagline">Me encanta la Tecnología y la Investigación Criminal. I love engineering and criminology</h2>
       <a href="http://meilingriselda.github.io/Comunidades/" class="btn">Comunidades</a>
       <a href="http://meilingriselda.github.io/Asociaciones/" class="btn">Asociaciones</a>
       <a href="http://meilingriselda.github.io/Contacto/" class="btn">Contacto</a>
@@ -23,7 +23,7 @@
     <section class="main-content">
       <p>``Hola mundo!!</p>
       
-      <p>Educación:</p>
+      
       <p>Ing. Electrónica</p>
       <p>Licda. Criminologa y Criminalista</p>
 
