--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
    
     <section class="page-header">
-       <center><IMG SRC="mei.jpg" WIDTH=150 HEIGHT=150></center>
+       <center><IMG SRC="mei2.jpg" WIDTH=150 HEIGHT=150></center>
       <h1 class="project-name">Meiling Esteban</h1>
       <h2 class="project-tagline">Me encanta la Tecnología y la Investigación Criminal. I love engineering and criminology</h2>
       <a href="http://meilingriselda.github.io/Comunidades/" class="btn">Comunidades</a>
