--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
        <center><IMG SRC="mei2.jpg" WIDTH=150 HEIGHT=150></center>
       <h1 class="project-name">Meiling Esteban</h1>
       <h2 class="project-tagline">Me encanta la Tecnología y la Investigación Criminal. I love engineering and criminology</h2>
-      <a href="http://meilingriselda.github.io/Asociaciones/" class="btn">Asociaciones</a>
+      <a href="http://meilingriselda.github.io/Empresas/" class="btn">Asociaciones</a>
       <a href="http://meilingriselda.github.io/Contacto/" class="btn">Contacto</a>
     </section>
 
