--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       <h2 class="project-tagline">Me encanta la Tecnología y la Investigación Criminal. I love engineering and criminology</h2>
       <a href="http://meilingriselda.github.io/Empresas/" class="btn">Asociaciones</a>
       <a href="http://meilingriselda.github.io/Comunidades/" class="btn">Radio Akbal</a>
-      <a href="http://meilingriselda.github.io/Contacto/" class="btn">Contacto</a>
+      <a href="https://meilingriselda.blogspot.com/" class="btn">Blog</a>      
+      <a href="https://t.me/MeiEsteban" class="btn">Telegram</a>
     </section>
 
     <section class="main-content">
